# wpp-barber-scheduler

./: README.md  example.env  pyproject.toml
app/: config.py  models.py  schemas.py  services.py
